<resources>
    <string name="app_name">Daily Life</string>
    <string name="package_name">tw.raymondsryang.life</string>
    <string name="story_title_demo">Title</string>
    <string name="story_content_demo">Today is a good day.</string>
    <string name="activity_label_add_story">新增故事</string>
    <string name="story_content">內文</string>
    <string name="story_title">標題</string>
    <string name="menu_save">儲存</string>
    <string name="story_date_demo">0000–00-00</string>
    <string name="menu_delete">刪除</string>
    <string name="menu_edit">編輯</string>
    <string name="web_application_id">663431439527-5jc8ohdblg5pp7e2mjfjih7sdtk5oglu.apps.googleusercontent.com</string>
</resources>