<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">
        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/story_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/story_title_demo"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:gravity="start|center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/story_date_demo"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:gravity="end|center_vertical"
                android:layout_gravity="bottom"/>
        </FrameLayout>
        <TextView
            android:id="@+id/story_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story_content_demo"
            android:textAppearance="@android:style/TextAppearance.Material.Body1" />
    </LinearLayout>
</android.support.v7.widget.CardView>